<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title_name">My Nanodegree Apps!</string>
    <string name="popular_movies_name">Popular Movies</string>
    <string name="stock_hawk_name">Stock Hawk</string>
    <string name="build_it_bigger_name">Build it Bigger</string>
    <string name="make_your_app_material_name">Make Your App Material</string>
    <string name="go_ubiquitous_name">Go Ubiquitous</string>
    <string name="capstone_name">Capstone</string>
</resources>
