<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.dhana.myappportfolio.MainActivity"
    android:background="#0091EA"
    >
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:id="@+id/title"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="26sp"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/popularMoviesButtonId"
            android:text="@string/popular_movies_name"
            android:layout_marginTop="24dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="showPopularMoviesApp"
            android:elevation="2dp"
            android:textColor="@color/buttonColor"
            android:background="@color/backgroundColorButton"
            android:height="@dimen/button_height"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stockHawkButtonId"
            android:text="@string/stock_hawk_name"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="showStockHawkApp"
            android:elevation="2dp"
            android:textColor="@color/buttonColor"
            android:background="@color/backgroundColorButton"
            android:height="@dimen/button_height"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buildItBiggerButtonId"
            android:text="@string/build_it_bigger_name"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="showBuildItBiggerApp"
            android:elevation="2dp"
            android:textColor="@color/buttonColor"
            android:background="@color/backgroundColorButton"
            android:height="@dimen/button_height"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/makeYourAppMaterialButtonId"
            android:text="@string/make_your_app_material_name"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="showMakeYourAppMaterialApp"
            android:elevation="2dp"
            android:textColor="@color/buttonColor"
            android:background="@color/backgroundColorButton"
            android:height="@dimen/button_height"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/goUbiquitousButtonId"
            android:text="@string/go_ubiquitous_name"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="showGoUbiquitousApp"
            android:elevation="2dp"
            android:textColor="@color/buttonColor"
            android:background="@color/backgroundColorButton"
            android:height="@dimen/button_height"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/capstoneButtonId"
            android:text="@string/capstone_name"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="showCapstoneApp"
            android:elevation="2dp"
            android:textColor="@color/buttonColor"
            android:background="@color/backgroundColorButton"
            android:height="@dimen/button_height"
            />
    </LinearLayout>
</ScrollView>